remove some breakpoints - however, there is a bug where body is shifted to the left

--- a/css/main.css
+++ b/css/main.css
@@ -44,18 +44,20 @@ Instructional Notes
 }
 /* Main Layout and init resizing */
 html {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
-    margin: 0;
+    margin: 0px;
     padding: 0;
+    width: 100%;
     background: #000;
     color: #fff;
     font-family: 'Helvetica Neue', sans-serif;
     font-weight: 400;
     font-size: 2em;
+    border: 1px solid orange;
 }
 
 /* Main Typography */
@@ -227,7 +229,12 @@ This is the controls for each Section.
     display: flex;
     visibility: hidden;
     height: 400vH;
+    min-height: 400vH;
+    max-height: 400vH;
     pointer-events: none;
+    padding: 0;
+    margin: 0;
+   
 }
 /* This item is to create an empty element for spacing */
 .space {
@@ -296,8 +303,7 @@ This is the controls for each Section.
     /* letter-spacing: -50pt; */
 }
 .pat-one .variable span {
-    margin: -180px;
-    border: 4px solid orange;
+    margin: -170px;
 }
 
 
@@ -375,9 +381,8 @@ This is the controls for each Section.
     transform-origin: top center;
     transform: translateY(0) rotate(180deg);
 }
-.pat-one .variable span {
-    margin: -180px;
-    border: 4px solid orange;
+.pat-three .variable span {
+    margin: -100px;
 }
 
 /* JS functions */
